--- a/style.css
+++ b/style.css
@@ -7,8 +7,46 @@
 
 :root {
   --titulo: "JetBrains Mono", monospace;
+
+  --cor1: #2c2b3d;
+  --cor2: #00bfa6;
+  --cor3: #c2c2c2;
+  --cor4: #fff;
 }
 
 body {
   font-family: "Open Sans", sans-serif;
+  background: var(--cor1);
+  text-align: center;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+}
+
+nav a img {
+  margin: 71px 101px;
+}
+
+nav ul {
+  display: flex;
+  gap: 64px;
+}
+
+nav ul li {
+  list-style: none;
+  margin-top: 71px;
+}
+
+nav ul li + li + li {
+  margin-right: 98px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: var(--cor4);
+  font-family: var(--titulo);
+  font-size: 14px;
+  line-height: 28px;
 }
